pamc/src/tests/sample_code/should_fail/scope/ref_underscore_fun.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let foo = fun _(-n: Nat): Nat {
    match n {
        .O => Nat.O,
        .S(n') => _(n'),
    }
};
